# oscars-results

./: README.md  oscar-results.py  oscar-sql-queries.py  oscar_data_reference.txt  pyproject.toml
output/: imdb_data.csv  oscars_best_pictures.csv  results.db
sql/: average_duration_all.sql  average_imdb_all.sql  highest_imdb_all.sql  highest_imdb_winner.sql  longest_duration_winner.sql  lowest_imdb_all.sql  lowest_imdb_winner.sql  shortest_duration_winner.sql  winners.sql  winners_count.sql
