[tool.poetry]
name = "oscar-results"
version = "0.1.0"
description = ""
authors = ["Robert Borg <rj.borg@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
cinemagoer = "^2023.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
